fixed alignment of project title

--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -25,7 +25,7 @@
 .card-title {
     padding-top: 1em;
     padding-left: 2em;
-    text-align: left;
+    text-align: center;
     font-weight: bold;
     font-size: 1em;
     overflow-x: hidden;
